--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -173,7 +173,7 @@
 				-116 85 -150 159 -83 182 5 385 196 454 67 24 177 23 246 -3z"/>
 				</g>
 				</svg>
-				<span>{% trans 'настройки' %}</span>
+				<span>{% trans 'настройки' context "profile" %}</span>
 			</button>
 
 		</div>
