--- a/article/templates/article/edit_article.html
+++ b/article/templates/article/edit_article.html
@@ -43,7 +43,7 @@
 							<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
 						</g>
 					</svg>
-					<span>обновить</span>
+					<span>{% trans 'обновить' context "article" %}</span>
 				</button>
 			</div>
 		</form>
