--- a/player/templates/player/redesign/overview_skills.html
+++ b/player/templates/player/redesign/overview_skills.html
@@ -18,10 +18,10 @@
 </button>
 <!--сила-->
 <div class="overview__love-stat-content active">
-  <h2>{% trans 'Сила' %}</h2>
+  <h2>{% trans 'Сила' context "skills" %}</h2>
   <div style="background-color: tomato;"></div>
   {% if train and train.skill == 'power' %}
-  <p class="overview__love-stat-timer">{% trans 'Завершение' %}: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
+  <p class="overview__love-stat-timer">{% trans 'Завершение' context "skills" %}: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
   {% endif %}
   <div class="overview__love-stat-price-time">
     <p class="overview__love-p-with-svg">
@@ -61,16 +61,16 @@
             {% endif %}
         {% endif %}
     {% else %}
-    {% trans 'изучить' %}
+    {% trans 'изучить' context "skills" %}
     {% endif %}
   </button>
 </div>
 <!--интеллект-->
 <div class="overview__love-stat-content">
-  <h2>{% trans 'Интеллект' %}</h2>
+  <h2>{% trans 'Интеллект' context "skills" %}</h2>
   <div style="background-color: #4791FF;"></div>
   {% if train and train.skill == 'knowledge' %}
-  <p class="overview__love-stat-timer">{% trans 'Завершение' %}: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
+  <p class="overview__love-stat-timer">{% trans 'Завершение' context "skills" %}: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
   {% endif %}
   <div class="overview__love-stat-price-time">
     <p class="overview__love-p-with-svg">
@@ -110,16 +110,16 @@
             {% endif %}
         {% endif %}
     {% else %}
-    {% trans 'изучить' %}
+    {% trans 'изучить' context "skills" %}
     {% endif %}
   </button>
 </div>
 <!--выносливость-->
 <div class="overview__love-stat-content">
-  <h2>{% trans 'Выносливость' %}</h2>
+  <h2>{% trans 'Выносливость' context "skills" %}</h2>
   <div style="background-color: #8DFF47;"></div>
   {% if train and train.skill == 'endurance' %}
-  <p class="overview__love-stat-timer">{% trans 'Завершение' %}: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
+  <p class="overview__love-stat-timer">{% trans 'Завершение' context "skills" %}: {{ train.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
   {% endif %}
   <div class="overview__love-stat-price-time">
     <p class="overview__love-p-with-svg">
@@ -159,7 +159,7 @@
             {% endif %}
         {% endif %}
     {% else %}
-    {% trans 'изучить' %}
+    {% trans 'изучить' context "skills" %}
     {% endif %}
   </button>
 </div>
@@ -174,16 +174,16 @@
 {% if premium %}
 <script>
     var cancel_skill_pk = null;
-    var cnl_header = '{% trans 'Отмена изучения навыка' context "skill_cancel" %}';
-    var cnl_text = '{% trans 'Изучение навыка будет отменено. Продолжить?' context "skill_cancel" %}';
-    var cnl_yes = '{% trans 'Продолжить' context "skill_cancel" %}';
-    var cnl_cancel = '{% trans 'Отмена' context "skill_cancel" %}';
+    var cnl_header = '{% trans 'Отмена изучения навыка' context "skills" %}';
+    var cnl_text = '{% trans 'Изучение навыка будет отменено. Продолжить?' context "skills" %}';
+    var cnl_yes = '{% trans 'Продолжить' context "skills" %}';
+    var cnl_cancel = '{% trans 'Отмена' context "skills" %}';
 </script>
 <!--прем блок-->
 <div class="overview__love-prem">
     {% if queue %}
     <!--таймер прем очереди-->
-    <p class="overview__love-prem-timer">{% trans 'Завершение' %}: {{ last_skill.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
+    <p class="overview__love-prem-timer">{% trans 'Завершение' context "skills" %}: {{ last_skill.end_dtime|timezone:player.time_zone|date:"d.m.Y H:i" }}</p>
     {% endif %}
     <!--премиум очередь навыков-->
     <ul class="overview__love-prem-list">
