--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -404,6 +404,12 @@ function addMarker(coordinates) {
      accessToken: 'your.mapbox.access.token'
  }).addTo(mymap);
 
+   const oreIcon = L.icon({
+    iconUrl: '/static/img/ore_point.svg',
+	iconSize: [50, 50],
+	iconAnchor: [25, 25],
+  });
+
  {% if player.destination %}
 
   var startCoords = [{{ player.region.north }}, {{ player.region.east }}];
@@ -493,10 +499,12 @@ function addMarker(coordinates) {
  var link_list = [];
  var center_dict = {};
 
+ var created_popups = [];
+
 <!--  L.polyline(latlngs[0].concat(latlngs[0][0])).addTo(mymap);-->
 
  {% for link in neighbours %}
-    link_list.push([{% localize off %}{{ link.region_1.pk }},{{ link.region_2.pk }}{% endlocalize %}]);
+    link_list.push(['{% localize off %}{{ link.region_1.on_map_id }}','{{ link.region_2.on_map_id }}{% endlocalize %}']);
  {% endfor %}
 
  {% for district in regions %}
@@ -538,10 +546,11 @@ function addMarker(coordinates) {
  region_props['{% localize off %}{{ district.on_map_id }}{% endlocalize %}']['online'] = {{ online_dict|dict_key:district.pk }};
  region_props['{% localize off %}{{ district.on_map_id }}{% endlocalize %}']['oil'] = {{ district.oil_mark.pk }};
  region_props['{% localize off %}{{ district.on_map_id }}{% endlocalize %}']['ore'] = {{ ore_has_dict|dict_key:district.pk }};
+ region_props['{% localize off %}{{ district.on_map_id }}{% endlocalize %}']['ore_data'] = "{{ district.coal_proc }}% / {{ district.iron_proc }}% / {{ district.bauxite_proc }}%";
  region_props['{% localize off %}{{ district.on_map_id }}{% endlocalize %}']['med_index'] = {{ med_index_dict|dict_key:district.pk }};
 
  poly_list.push(region_poly_{% localize off %}{{ district.pk }}{% endlocalize %});
- center_dict[{% localize off %}{{ district.pk }}{% endlocalize %}] = { 'lat':{% localize off %}{{ district.latitude }}, 'lng':{{ district.longitude }}{% endlocalize %} };
+ center_dict['{% localize off %}{{ district.on_map_id }}{% endlocalize %}'] = { 'lat':{% localize off %}{{ district.latitude }}, 'lng':{{ district.longitude }}{% endlocalize %} };
 
  {% endwith %}
  {% endfor %}
@@ -610,6 +619,10 @@ function addMarker(coordinates) {
     <!-- vvv перекраска регионов на карте в зависимости от фильтра vvv -->
 
   function repaint(mode) {
+        created_popups.forEach(function(pop) {
+          mymap.removeLayer(pop);
+        });
+
         poly_list.forEach(function(geojson) {
 
             var fillColor = '#ffffff';
@@ -622,6 +635,15 @@ function addMarker(coordinates) {
             }
             else if(mode == 'ore'){
                 fillColor = ore_colors[region_props[geojson.options.data.id]['ore']];
+
+                var marker = L.marker([center_dict[geojson.options.data.id]['lat'], center_dict[geojson.options.data.id]['lng']],
+                                                      {
+                                                        alt: geojson.options.data.id,
+                                                        icon: oreIcon
+                                                      }).addTo(mymap)
+                                                      .bindPopup(region_props[geojson.options.data.id]['ore_data']);
+
+                created_popups.push(marker);
             }
             else{
                 var min_val = min_dict[mode];
