--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -424,7 +424,7 @@ function addMarker(coordinates) {
 
   const planeIcon = L.icon({
     {% if player.pk == 1 %}
-    iconUrl: '/static/img/admin_plane.svg',
+    iconUrl: '/static/img/admin_plane.png',
     {% else %}
 	iconUrl: '/static/img/flight.png',
 	{% endif %}
