--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2645,7 +2645,7 @@ a {
   border: 0;
 }
 .articles__textContent a {
-    color: var(--c10two);
+  color: var(--c10two);
 }
 .articles__voteBtns {
   display: flex;
@@ -2727,6 +2727,8 @@ a {
 }
 .articles .articles__messages {
   padding-bottom: 40rem;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 @media (min-width: 1000px) {
