приложение на Андроид

--- a/player/templates/player/redesign/menu.html
+++ b/player/templates/player/redesign/menu.html
@@ -1,4 +1,5 @@
 {% load i18n %}
+{% load static %}
 <nav class="nav custom-scroll" id="modal-nav">
 
 	<ul class="nav__list">
@@ -161,6 +162,24 @@
 		</li>
 		<li class="nav__item nav__item--flex">
 			<div class="nav__item-flex">
+
+				<a class="nav__item-link" href="{% static 'redesign/apk/wild_politics.apk' %}" target="_blank" rel="noopener noreferrer">
+
+					<svg width="30" height="30" viewBox="0 0 30 30" fill="none">
+						  <path
+							 d="M5.3999 2.39999C3.75019 2.39999 2.3999 3.75028 2.3999 5.39999V24.6C2.3999 26.2497 3.75019 27.6 5.3999 27.6H24.5999C26.2496 27.6 27.5999 26.2497 27.5999 24.6V5.39999C27.5999 3.75028 26.2496 2.39999 24.5999 2.39999H5.3999ZM5.3999 3.59999H24.5999C25.601 3.59999 26.3999 4.3989 26.3999 5.39999V24.6C26.3999 25.6011 25.601 26.4 24.5999 26.4H5.3999C4.39881 26.4 3.5999 25.6011 3.5999 24.6V5.39999C3.5999 4.3989 4.39881 3.59999 5.3999 3.59999Z"
+							 fill="var(--c10two)"
+							 id="path1" />
+						  <g
+							 id="g4"
+							 transform="matrix(0.68522485,0,0,0.68522485,-119.76379,-158.28161)">
+							<path
+						   style="fill:var(--c10two);stroke-width:0.142459"
+						   d="m 182.01958,261.72024 h 29.30268 c 0.76444,0 1.33456,-0.70418 1.17757,-1.45236 -0.96929,-4.61967 -3.9105,-8.51279 -7.9015,-10.76179 l 2.505,-4.51979 c 0.16953,-0.30601 0.0591,-0.69164 -0.24702,-0.86117 -0.30671,-0.16995 -0.69178,-0.059 -0.86131,0.24702 l -2.52394,4.55386 c -2.06723,-0.95932 -4.37107,-1.49511 -6.80015,-1.49511 -2.4292,0 -4.73304,0.53579 -6.80027,1.49511 l -2.52394,-4.554 c -0.16967,-0.30614 -0.55531,-0.41655 -0.86117,-0.24702 -0.306,0.16952 -0.41656,0.55516 -0.24703,0.86116 l 2.50501,4.5198 c -3.99099,2.24914 -6.93221,6.14212 -7.90149,10.76193 -0.15714,0.74818 0.41299,1.45236 1.17756,1.45236 z m 23.3949,-6.73588 c 0,0.75246 -0.61001,1.36261 -1.36261,1.36261 -0.75247,0 -1.36263,-0.61001 -1.36263,-1.36261 0,-0.75248 0.61001,-1.36263 1.36263,-1.36263 0.7526,0 1.36261,0.61015 1.36261,1.36263 z m -16.12479,-1.36263 c 0.75247,0 1.36262,0.61001 1.36262,1.36263 0,0.75246 -0.61001,1.36261 -1.36262,1.36261 -0.75248,0 -1.36262,-0.61001 -1.36262,-1.36261 0,-0.75248 0.61001,-1.36263 1.36262,-1.36263 z"
+						   id="path4" />
+						</g>
+					</svg>
+				</a>
 
 				<a class="nav__item-link" href="https://wiki.wildpolitics.ru/" target="_blank" rel="noopener noreferrer">
 					<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
