--- a/event/templates/event/inviting.html
+++ b/event/templates/event/inviting.html
@@ -60,15 +60,23 @@
 			</p>
 			<br>
 			<p class="ct__s-text">
-				Приглашайте новых игроков в проект, чтобы получать награды!
+				Приглашайте новых игроков в проект и возвращайте уже игравших, чтобы получать награды!
 			</p>
 			<br>
 			<p class="ct__s-text">
 				Новички должны указать ваш ID на вкладке "активировать", первые трое суток после регистрации.
+				<br>
+				Игроки, заходившие в проект более 30 дней назад, также имеют доступ к указанной вкладке.
+			</p>
+			<br>
+			<p class="ct__s-text">
+				ВАЖНО: вернувшимся в проект игрокам необходимо сделать это до получения Финансирования!
 			</p>
 			<br>
 			<p class="ct__s-text">
 				Получайте по 1% к Финансированию за каждые десять уровней Характеристик, изученных приглашёнными игроками.
+				<br>
+				Для ранее игравших игроков бонус считается как разница между суммой Характеристик после и до возвращения в игру.
 			</p>
 			<br>
 			<p class="ct__s-text">
