фикс страницы праймериз

--- a/party/templates/primaries/primaries.html
+++ b/party/templates/primaries/primaries.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+{% localize off %}
 <div class="row" style="position: relative; min-width: 1500px">
     <div class="col-xs-1 col-sm-1 col-md-1">
     <!-- Tab links -->
@@ -91,4 +92,5 @@
     <div class="col-xs-1 col-sm-1 col-md-1">
     </div>
 </div>
+{% endlocalize %}
 {% endblock %}
